# YOLOv5-RDK-X5-Realtime-Tracking-System

./: CMakeLists.txt  README.md
include/: camera_yolo.hpp  serial_port.hpp  yolov5_detector.hpp
src/: camera_yolo.cpp  main.cpp  main.cpp.bak  serial_port.cpp  test.cpp  yolov5_detector.cpp
